# nanoGPT

./: bigram.py  mygpt.py  pyproject.toml  token_exp.py  toy.py
