[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Nicolay Nerdal <nicolay.nerdal@smn.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
